--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,5 @@
 {
-    "singleQuote": true,
-    "arrowParens": "always"
+  "singleQuote": true,
+  "arrowParens": "always",
+  "trailingComma": "all"
 }
