--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
     "react-dom": "^17.0.2"
