--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
     "classnames": "^2.3.1",
+    "formik": "^2.2.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
