--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
+    "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "prettier": "2.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.64.4",
