--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "prop-types": "^15.7.2",
