--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
+    "notistack": "^2.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
