--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "react": "^17.0.2",
     "react-addons-shallow-compare": "^15.6.3",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   }
 }
