--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "webpack",
     "start": "webpack serve --open",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,8 +35,10 @@
     "css-loader": "^6.5.1",
     "eslint": "^8.3.0",
     "eslint-config-airbnb": "^19.0.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "html-webpack-plugin": "^5.5.0",
@@ -52,6 +56,7 @@
     "@mui/icons-material": "^5.2.1",
     "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.3",
+    "@mui/system": "^5.2.4",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
